# cc-aio

./: .gitignore  .onedev-buildspec.yml  Jenkinsfile  README.md  demo.py  dev-requirements.txt  jenkins.sh  make.sh  requirements.txt  setup.cfg  setup.py
cc_driver/alist/: storage.py
cc_driver/pve/: pvesh.py
cc_utils/: __init__.py  execute.py  func.py  network.py
cg_driver/alist/: client.py
cg_driver/pve/: pvesh.py
cg_utils/: __init__.py  execute.py  linux.py  network.py
cs_driver/alist/: client.py  storage.py
cs_utils/: __init__.py  execute.py  file.py  func.py  my_decorator.py  network.py
doc/: ALL-IN-ONE说明.md  features.md  my_dev.md  获取飞书webhook.md
docker/: dpkg-dev_debian.dockerfile
hostadmin/: config.py  depends.py  hostcli.py  hostrpc.py  rpc.py  server.py
hostadmin/business/: __init__.py  ceph.py  disk.py  host.py  network.py  pve.py  service.py  ssh.py
hostadmin/files/: __init__.py
hostadmin/files/host/: chrony.conf  pci-device-id.ini  smb.conf  ustc-sources.list
hostadmin/files/shell/: add_as_ceph_node.sh  deploy_kolla.sh  install_as_ceph_admin_node.sh  install_base_env.sh  install_kolla_ansible.sh  kolla_access_ceph.sh  utils.sh
hostadmin/files/ssh/: id_rsa  id_rsa.pub
hostadmin/test/: check.py
hostadmin/tools/: ifcfg-mgt.py
pve_admin/: config.py  depends.py  hostcli.py  hostrpc.py  rpc.py  server.py
pve_admin/business/: __init__.py  ceph.py  cinder.py  glance.py  host.py  keystone.py  kolla.py  license.py  network.py  nova.py  ssh.py
pve_admin/files/: __init__.py
pve_admin/files/ceph/: ceph.conf
pve_admin/files/shell/: add_as_ceph_node.sh  add_compute_node.sh  install_as_ceph_admin_node.sh  install_base_env.sh  kolla_access_ceph.sh  utils.sh
pve_admin/test/: check.py
pve_admin/tools/: ifcfg-mgt.py
pve_tui/: config.py  exception.py  jm_data.py  main.py  utils.py
pve_tui/ui/: __init__.py  base_view.py  my_widget.py
pve_tui/ui/base_env/: install.py  menu.py
pve_tui/ui/ceph/: __init__.py  config.py  deploy.py  osd_add.py  osd_del.py
pve_tui/ui/network/: __init__.py  config.py  menu.py
pve_tui/ui/openstack/: access.py  add.py  config.py  deploy.py  update.py
pvetui/: config.py  exception.py  jm_data.py  main.py  utils.py
pvetui/ui/: base_view.py  my_widget.py
pvetui/ui/base_env/: __init__.py  install.py  menu.py
pvetui/ui/ceph/: config.py  deploy.py  osd_add.py  osd_del.py
pvetui/ui/network/: config.py  menu.py
pvetui/ui/openstack/: __init__.py  access.py  add.py  config.py  deploy.py  update.py
pvetui/ui/pve/: __init__.py  aio_operation.py  aio_service.py  all_in_one.py
pvetui/ui/pve/config/: __init__.py  disk.py  igd.py  network.py
pvetui/ui/pve/services/: alist.py  public_ip.py  samba.py  wireguard.py
scripts/: aliyun-ddns.py  create-local-alist-storage.py  database-backup.sh  database-restore.sh  docker-rebuild.sh  docker-run.tpl  galera-launcher.sh  install_alist.sh  report_public_ip_if_changed_every_minute.sh  report_public_ip_if_changed_robot.sh  set-dns.sh  set-ip6tables.py  set-ntp.py  set-vmbond.sh  upload-image.sh  wireguard.sh  wireguard_install.sh
