[metadata]
name = cg-aio
big_number_version = 1
small_number_version = 0
summary = pve config tool in tui make by chao ge
description-file = README.md
author = chao ge
author-email = 986883511@qq.com
home-page = https://github.com/m986883511
license = Apache License, Version 2.0
classifier =
    Environment :: PVE8.x
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[entry_points]
console_scripts =
    cg-hostadmin = hostadmin.server:main
    cg-hostcli = hostadmin.hostcli:main
    cg-hostrpc = hostadmin.hostrpc:main
    cg-aio = pvetui.main:main

[files]
data_files =
    cg/doc = doc/*
    cg/scripts = scripts/*

packages =
    hostadmin
    pvetui
    cg_utils
    cg_driver
