[metadata]
name = cc-aio
big_number_version = 1
small_number_version = 0
summary = pve config tool in tui make by chao chao
description-file = README.md
author = chao chao
author-email = 986883511@qq.com
home-page = https://github.com/m986883511
license = Apache License, Version 2.0
classifier =
    Environment :: PVE8.x
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[entry_points]
console_scripts =
    cc-hostadmin = hostadmin.server:main
    cc-hostcli = hostadmin.hostcli:main
    cc-hostrpc = hostadmin.hostrpc:main
    cc-aio = pvetui.main:main

[files]
data_files =
    cc/doc = doc/*
    cc/scripts = scripts/*

packages =
    hostadmin
    pvetui
    cc_utils
    cc_driver
